stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_run__run_basic_workflow_with_json_input.snap
---
source: crates/stepflow-main/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=tests/mock/basic.yaml"
    - "--input-json={\"name\": \"hello\"}"
---
success: true
exit_code: 0
----- stdout -----
{"outcome":"success","result":{"name":"world","x":2,"y":8}}
----- stderr -----
