stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_run__run_invalid_input_json.snap
---
source: crates/stepflow-main/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=tests/mock/basic.yaml"
    - "--input-json=invalid json"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
REPL command error: Invalid JSON input
